--- a/styles/style.css
+++ b/styles/style.css
@@ -109,8 +109,8 @@ button{
 }
 
 #MineField{
-    padding-top: 50px;
-    margin-left: 40% ;
+    padding-top: 10px;
+    margin-left: 30% ;
     max-width: 12%;
 }
 
@@ -151,8 +151,7 @@ button{
     
 }
 #MineH1{
-    border-bottom: 100px;
-    padding-bottom: 100px;
+    font-size: 30px;
 }
 
 .MineRows{
@@ -164,6 +163,19 @@ button{
     background-color: black;
 }
 
+#MineRestart{
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 18px;
+    text-decoration: none;
+}
 
+#MineReload{
+    cursor: pointer;
+    color: aqua;
+    height: 10px;
+    width: 50px;
+}
 
 
